# thera-ai

./: .gitattributes  .gitignore  CHANGELOG.md  DESIGN_LOG.md  LICENSE  NOTICE  README.md  README.th.md  pyproject.toml
docs/: ARCHITECTURE.md  ARCHITECTURE.th.md  CLI_SPEC.md  QUICKSTART.md  QUICKSTART.th.md  USE_CASES.md  USE_CASES.th.md  corpus-mbu-volume-mapping.md
src/thera/: __init__.py  citation.py  cli.py  corpus.py  corpus_setup.py  sikkhapada.py
tests/: conftest.py  test_compare.py  test_corpus.py  test_corpus_mapping.py  test_cross_ref.py  test_read.py  test_search.py  test_sikkhapada.py  test_verify.py
