[project]
name = "thera"
version = "0.0.1"
description = "Zero-hallucination Tipitaka CLI — verbatim retrieval + cross-reference + contradiction surfacing for teaching Buddhism from canonical text"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Theerayut Boonkird" }
]
requires-python = ">=3.11"
keywords = ["tipitaka", "pali-canon", "buddhism", "dhamma", "thai", "buddhawajana"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Religion",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Thai",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Religion",
  "Topic :: Text Processing :: Linguistic",
]

dependencies = [
  "typer>=0.16,<1.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10",
]

[project.scripts]
thera = "thera.cli:app"

[project.urls]
Homepage = "https://github.com/aegiszero/thera"
Repository = "https://github.com/aegiszero/thera"
Issues = "https://github.com/aegiszero/thera/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thera"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
pythonVersion = "3.11"
reportMissingImports = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "verify: network-gated 84000.org verification tests",
  "corpus: heavy corpus-bootstrap tests that read full upstream `.sql.bz2` payloads (~30 MB)",
]
